# Buscaminas_IP

./: CMakeLists.txt  LICENSE  README.md  ajustes.c  ajustes.h  jugadas.c  jugadas.h  main.c  salida.c  salida.h  saves.c  saves.h  tablero.c  tablero.h
